<?xml version="1.0"?>
<package>
  <name>agitr</name>
  <version>0.0.0</version>
  <description>Exercise1: hello world, publish,subscribe</description>
  <maintainer email="jsupratman13@todo.todo">jsupratman13</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>turtlesim</build_depend>
  <run_depend>turtlesim</run_depend>
  <export>
  </export>
</package>
